06.Vworkspace/05.vworkspace-phpadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vworkspace-phpmyadmin-deploy
  labels:
    app: vworkspace
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: vworkspace-phpmyadmin-pod
  template:
    metadata:
      labels:
        pod-label: vworkspace-phpmyadmin-pod
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          resources:
            limits:
              memory: "248Mi"
              cpu: "100m" # 1000m = 1 CPU
---
apiVersion: v1
kind: Service
metadata:
  name: vworkspace-phpmyadmin-svc
  labels:
    app: vworkspace
spec:
  selector:
    pod-label: vworkspace-phpmyadmin-pod
  ports:
  - protocol: TCP
    port: 80
