06.Vworkspace/06.vworkspace-office.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vworkspace-office-deploy
  labels:
    app: vworkspace
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: vworkspace-office-pod
  template:
    metadata:
      labels:
        pod-label: vworkspace-office-pod
    spec:
      containers:
        - name: office
          image: alehoho/oo-ce-docker-license
          resources:
            limits:
              memory: "2048Mi"
              cpu: "2000m" # 1000m = 1 CPU
---
apiVersion: v1
kind: Service
metadata:
  name: vworkspace-office-svc
  labels:
    app: vworkspace
spec:
  selector:
    pod-label: vworkspace-office-pod
  ports:
  - protocol: TCP
    port: 80
