06.Vworkspace/08.vworkspace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vworkspace-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  # fix upload size vworkspace
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  # session sticky
  #   nginx.ingress.kubernetes.io/affinity: cookie
  #   nginx.ingress.kubernetes.io/affinity-mode: persistent
  #   nginx.ingress.kubernetes.io/session-cookie-hash: sha1
  #   nginx.ingress.kubernetes.io/session-cookie-name: vworkspace-sticky
  #   nginx.ingress.kubernetes.io/session-cookie-expires: "259200"
  #   nginx.ingress.kubernetes.io/session-cookie-max-age: "259200"
  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
  labels:
    name: vworkspace-ingress
spec:
  rules:
  - host: local.demo.vworkspace.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vworkspace-server-svc
            port: 
              number: 80
  - host: localophpmyadmin.demo.vworkspace.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vworkspace-server-svc
            port: 
              number: 80
  - host: localoffice.demo.vworkspace.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vworkspace-office-svc
            port: 
              number: 80
